Added additional tests to the select function, added instructions compiling and running the project to the Table.java file